--- a/style.css
+++ b/style.css
@@ -62,9 +62,23 @@
   max-width: 100%;
   width: 100%;
   margin: 0 auto;
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     to bottom,
     rgba(0, 0, 0, 0.9),
+    rgba(16, 37, 34, 0.9)
+  ); */
+  background-color: black;
+  background-image: url("./media/pattern-bg.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 200%;
+  background-attachment: fixed;
+}
+.gradiant-bg {
+  width: 100%;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.7),
     rgba(16, 37, 34, 0.9)
   );
 }
@@ -72,16 +86,19 @@
   width: 100%;
   height: 100vh;
   position: relative;
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
       to bottom,
       rgba(0, 0, 0, 0.2),
       rgba(16, 37, 34, 0.5)
     ),
-    url("./media/pattern.png");
+    url("./media/pattern.png"); */
   /* background-image: url("./media/pattern-bg.svg"); */
+  /* background-color: black; */
+  /* background-image: url("./media/pattern-bg.svg");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: stretch;
+  background-size: full;
+  background-attachment: fixed; */
   color: var(--text);
 }
 /* .hero-class::after {
